promo positioning and letter-spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ input[type="radio"].visually-hidden {
 	padding-top: 40px;
 
 	line-height: 36px;
-	letter-spacing: .01em;
+	/*letter-spacing: .01em;*/
 	color: #000000;	
 }
 
@@ -297,41 +297,11 @@ input[type="radio"].visually-hidden {
 	outline: none;
 }
 
-.main-search input[placeholder] { 
-	font-family: "opensanslight", Arial, sans-serif;
-	font-size: 15px;
-	line-height: 36px;
-	letter-spacing: .01em;
-	color: rgba(0, 0, 0, .3);
-}
-.main-search input::-webkit-input-placeholder {  
-	font-family: "opensanslight", Arial, sans-serif;
-	font-size: 15px;
-	line-height: 36px;
-	letter-spacing: .01em;
-	color: rgba(0, 0, 0, .3);
-}
-.main-search input::-moz-placeholder { 
-	font-family: "opensanslight", Arial, sans-serif;
-	font-size: 15px;
-	line-height: 36px;
-	letter-spacing: .01em;
-	color: rgba(0, 0, 0, .3);
-}
-.main-search input:-moz-placeholder {  
-	font-family: "opensanslight", Arial, sans-serif;
-	font-size: 15px;
-	line-height: 36px;
-	letter-spacing: .01em;
-	color: rgba(0, 0, 0, .3);
-}
-.main-search input:-ms-input-placeholder { 	 
-	font-family: "opensanslight", Arial, sans-serif;
-	font-size: 15px;
-	line-height: 36px;
-	letter-spacing: .01em;
-	color: rgba(0, 0, 0, .3);
-}
+.main-search input[placeholder] 					{ color: rgba(0, 0, 0, .3); }
+.main-search input::-webkit-input-placeholder 		{ color: rgba(0, 0, 0, .3); }
+.main-search input::-moz-placeholder 				{ color: rgba(0, 0, 0, .3); }
+.main-search input:-moz-placeholder 				{ color: rgba(0, 0, 0, .3); }
+.main-search input:-ms-input-placeholder 			{ color: rgba(0, 0, 0, .3); }
 
 .main-search input[placeholder]:hover 					{ color: rgba(0, 0, 0, .6); }
 .main-search input:hover::-webkit-input-placeholder		{ color: rgba(0, 0, 0, .6); }
@@ -621,7 +591,6 @@ input[type="radio"].visually-hidden {
 	position: relative;
 	margin-top: -125px;
 	margin-bottom: 94px;
-	letter-spacing: .01em;
 }
 
 .promo input[type="radio"] {
@@ -636,7 +605,7 @@ input[type="radio"].visually-hidden {
 }
 
 .promo-list {
-	padding-right: 60px;
+	padding-right: 59px;
 }
 
 .promo-slider-controls {
@@ -748,7 +717,7 @@ input[type="radio"].visually-hidden {
 
 .promo-info {
 	position: relative;
-	width: 500px;
+	width: 501px;
 	padding-top: 94px;
 }
 
@@ -760,35 +729,27 @@ input[type="radio"].visually-hidden {
 	font-family: "gilroyextrabold", Arial, sans-serif;
 	line-height: 1;
 	font-size: 179.2px;
+	letter-spacing: .01em;
 	
 	color: #ffffff; 	
 }
 
 .promo-item-monopods::before {
-	right: -11px;
+	content:"01";
+	right: -13px;
 	top: 0;
 }
 
 .promo-item-fitbands::before {
-	right: -10px;
+	content:"02";
+	right: -12px;
 	top: 1px;
 }
 
 .promo-item-copters::before {
-	right: -10px;
-	top: 0;
-}
-
-.promo-item:nth-of-type(1)::before {
-	content:"01";
-}
-
-.promo-item:nth-of-type(2)::before {
-	content:"02";
-}
-
-.promo-item:nth-of-type(3)::before {
 	content:"03";
+	right: -11px;
+	top: 0;
 }
 
 .promo-info::before {
@@ -849,6 +810,7 @@ input[type="radio"].visually-hidden {
 	font-family: "gilroyextrabold", Arial, sans-serif;
 	font-size: 47px;
 	line-height: 1.2;
+	letter-spacing: .01em;
 	color: #000000;
 }
 
@@ -856,6 +818,7 @@ input[type="radio"].visually-hidden {
 	margin: 0;
 	margin-bottom: 43px;
 	padding-right: 10px;
+	letter-spacing: .01em;
 }
 
 .promo-item-fitbands .promo-desc {
@@ -885,9 +848,17 @@ input[type="radio"].visually-hidden {
 	border: 0;
 }
 
-.promo-spec td:not(:last-of-type) {
-	padding-right: 78px;
+.promo-spec td {
+	width: 160px;
 }
+
+.promo-spec td:nth-of-type(2) {
+	width: 138px;
+}
+
+/*.promo-spec td:not(:last-of-type) {
+	padding-right: 78px;
+}*/
 
 .promo-spec-data td {
 	padding-bottom: 9px;
@@ -898,11 +869,13 @@ input[type="radio"].visually-hidden {
 	font-size: 36px;
 	line-height: 1.2;
 	color: #000000;
+	letter-spacing: .01em;
 }
 
 .promo-spec-keys {
 	font-size: 13px;
 	line-height: 20px;
+	letter-spacing: .01em;
 }
 
 
